saint-lascivious.github.io: serve new index from /new/index.html
Changes to be committed:
 - deleted:    index-new.html
 - renamed:    .formatted/index-new.html -> new/.formatted/index.html
 - new file:   new/index.html

--- a/new/.formatted/index.html
+++ b/new/.formatted/index.html
@@ -20,28 +20,28 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
 
-    <meta name="msapplication-TileImage" content="resources/icons/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="../resources/icons/mstile-144x144.png">
     <meta name="msapplication-TileColor" content="#EF5350">
 
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="../resources/icons/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../resources/icons/android-chrome-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="../resources/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
+    <link rel="icon" sizes="any" href="../favicon.ico">
 
-    <link rel="canonical" href="https://sainternet.xyz/index.html">
+    <link rel="canonical" href="https://sainternet.xyz/new">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.red-blue.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.red-blue.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/sainternet-new.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/sainternet-new.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/img.min.css">
+    <link rel="preload" as="style" href="../resources/stylesheets/material.red-blue.min.css">
+    <link rel="stylesheet" href="../resources/stylesheets/material.red-blue.min.css">
+    <link rel="preload" as="style" href="../resources/stylesheets/sainternet-new.min.css">
+    <link rel="stylesheet" href="../resources/stylesheets/sainternet-new.min.css">
+    <link rel="preload" as="style" href="../resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="../resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="../resources/stylesheets/img.min.css">
+    <link rel="stylesheet" href="../resources/stylesheets/img.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,36 +50,36 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
 
-    <link rel="preload" as="style" href="resources/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
+    <link rel="preload" as="style" href="../resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="../resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="../resources/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="../resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="../resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="../resources/fontawesome/css/brands.min.css">
 
-    <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp">
+    <link rel="preload" as="image" href="../resources/images/wurmple.webp" type="image/webp">
     <!--
-    <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp">
+    <link rel="preload" as="image" href="../resources/images/wurmple-shiny.webp" type="image/webp">
     -->
 
-    <script type="text/javascript" src="resources/javascript/headers-new.min.js" async></script>
+    <script type="text/javascript" src="../resources/javascript/headers-new.min.js" async></script>
     <script src="https://hammerjs.github.io/dist/hammer.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/sainternet-new.min.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/random_phrase.min.js" defer></script>
-    <script type="text/javascript" src="pwapp.min.js" defer></script>
+    <script type="text/javascript" src="../resources/javascript/material.min.js" defer></script>
+    <script type="text/javascript" src="../resources/javascript/sainternet-new.min.js" defer></script>
+    <script type="text/javascript" src="../resources/javascript/load-fonts.min.js" defer></script>
+    <script type="text/javascript" src="../resources/javascript/random_phrase.min.js" defer></script>
+    <script type="text/javascript" src="../pwapp.min.js" defer></script>
 
-    <link rel="prefetch" href="newsandupdates.html" as="document">
-    <link rel="prerender" href="newsandupdates.html">
-    <link rel="prefetch" href="filtereddns.html" as="document">
-    <link rel="prerender" href="filtereddns.html">
-    <link rel="prefetch" href="pokedexoverdns.html" as="document">
-    <link rel="prerender" href="pokedexoverdns.html">
-    <link rel="prefetch" href="projects.html" as="document">
-    <link rel="prerender" href="projects.html">
+    <link rel="prefetch" href="../newsandupdates.html" as="document">
+    <link rel="prerender" href="../newsandupdates.html">
+    <link rel="prefetch" href="../filtereddns.html" as="document">
+    <link rel="prerender" href="../filtereddns.html">
+    <link rel="prefetch" href="../pokedexoverdns.html" as="document">
+    <link rel="prerender" href="../pokedexoverdns.html">
+    <link rel="prefetch" href="../projects.html" as="document">
+    <link rel="prerender" href="../projects.html">
 
-    <link rel="manifest" href="sainternet.webmanifest">
+    <link rel="manifest" href="../sainternet.webmanifest">
 
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
@@ -96,10 +96,10 @@
           </a>
         </div>
         <ul>
-          <li><a class="embiggen" href="newsandupdates.html">News and Updates</a></li>
-          <li><a class="embiggen" href="filtereddns.html">Filtered DNS</a></li>
-          <li><a class="embiggen" href="pokedexoverdns.html">Pokédex over DNS</a></li>
-          <li><a class="embiggen" href="projects.html">Popular Projects</a></li>
+          <li><a class="embiggen" href="../newsandupdates.html">News and Updates</a></li>
+          <li><a class="embiggen" href="../filtereddns.html">Filtered DNS</a></li>
+          <li><a class="embiggen" href="../pokedexoverdns.html">Pokédex over DNS</a></li>
+          <li><a class="embiggen" href="../projects.html">Popular Projects</a></li>
         </ul>
       </nav>
       <div class="ribbon red-ribbon"></div>
@@ -117,12 +117,12 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Welcome</span></h3>
             <picture>
-              <source srcset="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple.png" type="image/png" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+              <source srcset="../resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)">
+              <source srcset="../resources/images/wurmple.png" type="image/png" media="(prefers-color-scheme: light)">
+              <source srcset="../resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+              <source srcset="../resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
+              <source srcset="../resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
+              <img src="../resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
             </picture>
             <p align="center">
               Welcome to Sainternet.
