saint-lascivious.github.io: poke menu
 - mainly to trigger sitemap rebuild
   and it needed doing

Changes to be committed:
 - modified:   new/.formatted/index.html
 - modified:   new/index.html

--- a/new/.formatted/index.html
+++ b/new/.formatted/index.html
@@ -58,9 +58,6 @@
     <link rel="stylesheet" href="../resources/fontawesome/css/brands.min.css">
 
     <link rel="preload" as="image" href="../resources/images/wurmple.webp" type="image/webp">
-    <!--
-    <link rel="preload" as="image" href="../resources/images/wurmple-shiny.webp" type="image/webp">
-    -->
 
     <script type="text/javascript" src="../resources/javascript/headers-new.min.js" async></script>
     <script src="https://hammerjs.github.io/dist/hammer.js" defer></script>
@@ -96,6 +93,7 @@
           </a>
         </div>
         <ul>
+          <li><a class="embiggen" href="#welcome">Home</a></li>
           <li><a class="embiggen" href="../newsandupdates.html">News and Updates</a></li>
           <li><a class="embiggen" href="../filtereddns.html">Filtered DNS</a></li>
           <li><a class="embiggen" href="../pokedexoverdns.html">Pokédex over DNS</a></li>
