saint-lascivious.github.io: lint, structure, minify js
 - try fix image links w/ light/dark mode & multiple media types
   webp, png, jpeg

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/index.html
 - modified:   .formatted/pwapp-serviceworker.min.js
 - modified:   .formatted/pwapp.min.js
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html
 - modified:   pwapp-serviceworker.min.js
 - modified:   pwapp.min.js
 - modified:   resources/javascript/.formatted/headers.min.js
 - modified:   resources/javascript/.formatted/load-fonts.min.js
 - modified:   resources/javascript/.formatted/random_phrase.min.js
 - modified:   resources/javascript/.formatted/sainternet.min.js
 - modified:   resources/javascript/headers.min.js
 - modified:   resources/javascript/load-fonts.min.js
 - modified:   resources/javascript/random_phrase.min.js
 - modified:   resources/javascript/sainternet.min.js
 - modified:   resources/stylesheets/.formatted/img.min.css
 - modified:   resources/stylesheets/img.min.css

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -132,14 +132,20 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
-            <picture>
-              <source srcset="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple.png" type="image/png" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
-            </picture>
+            <a href="pokedexoverdns.html#pokedexoverdns" class="subterfuge">
+              <picture class="light-mode-img">
+                <source srcset="resources/images/wurmple.webp" type="image/webp">
+                <source srcset="resources/images/wurmple.png" type="image/png">
+                <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
+                <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+              </picture>
+              <picture class="dark-mode-img">
+                <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
+                <source srcset="resources/images/wurmple-shiny.png" type="image/png">
+                <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
+                <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+              </picture>
+            </a>
             <p align="center">
               A wild <b>Wurmple</b> appeared!
             </p>
