--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -132,14 +132,20 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
-            <picture>
-              <source srcset="resources/images/luxio.webp" type="image/webp" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/luxio.png" type="image/png" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/luxio-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/luxio-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-            </picture>
+            <a href="pokedexoverdns.html#pokedexoverdns" class="subterfuge">
+              <picture class="light-mode-img">
+                <source srcset="resources/images/luxio.webp" type="image/webp">
+                <source srcset="resources/images/luxio.png" type="image/png">
+                <source srcset="resources/images/luxio.jpeg" type="image/jpeg">
+                <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              </picture>
+              <picture class="dark-mode-img">
+                <source srcset="resources/images/luxio-shiny.webp" type="image/webp">
+                <source srcset="resources/images/luxio-shiny.png" type="image/png">
+                <source srcset="resources/images/luxio-shiny.jpeg" type="image/jpeg">
+                <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              </picture>
+            </a>
             <p align="center">
               A wild <b>Luxio</b> appeared!
             </p>
