--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -12,8 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <meta name="theme-color" content="#2196F3" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#2196F3" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#2196F3">
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
