saint-lascivious.github.io: ChatGPT Helps Build a Website, Part 2
 - add image fetch priority (presumably it's targeting FCP here?)
 - weird shit with preloading the fallback image case

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/index.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html
 - modified:   pokedexoverdns.html

--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -48,7 +48,8 @@
     <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
-    <link rel="preload" as="image" href="resources/images/terminal.webp" type="image/webp">
+    <link rel="preload" as="image" href="resources/images/terminal.jpg" type="image/jpeg" fetchpriority="high">
+    <link rel="preload" as="image" href="resources/images/terminal.webp" type="image/webp" fetchpriority="high">
 
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
