--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -46,7 +46,8 @@
     <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
-    <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp">
+    <link rel="preload" as="image" href="resources/images/wurmple.jpg" type="image/jpeg" fetchpriority="high">
+    <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp" fetchpriority="high">
 
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
