saint-lascivious.github.io: revert most ChatGPT assisted revisions
 - ChatGPT doesn't know its ass from its elbow
   it has no ability to discern quantity from quality
   and seems to associate frequency with truth

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   sitemap.xml
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -27,24 +27,34 @@
     <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-    <link rel="shortcut icon" sizes="any" href="favicon.ico">
+    <link rel="icon" sizes="any" href="favicon.ico">
 
     <link rel="canonical" href="https://sainternet.xyz/testsainternet.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
+    <link rel="preload" as="style" href="resources/stylesheets/material.light_blue-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.light_blue-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/pre.min.css">
     <link rel="stylesheet" href="resources/stylesheets/pre.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
 
+    <link rel="preload" as="style" href="resources/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
