--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -58,6 +58,7 @@
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
@@ -81,6 +82,9 @@
     <link rel="dns-prefetch" href="www.reddit.com">
   </head>
   <body>
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
