saint-lascivious.github.io: update fontawesome
 - update fontawesome to 6.3.0
 - change font-display to swap
 - aggressively minify
 - update fontawesome paths
   (type-version-platform)

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/pwapp-serviceworker.min.js
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   pwapp-serviceworker.min.js
 - modified:   reportaproblem.html
 - renamed:    resources/fontawesome/LICENSE.txt -> resources/fontawesome-free-6.3.0-web/LICENSE.txt
 - renamed:    resources/fontawesome/css/.formatted/brands.min.css -> resources/fontawesome-free-6.3.0-web/css/.formatted/brands.min.css
 - renamed:    resources/fontawesome/css/.formatted/fontawesome.min.css -> resources/fontawesome-free-6.3.0-web/css/.formatted/fontawesome.min.css
 - renamed:    resources/fontawesome/css/.formatted/solid.min.css -> resources/fontawesome-free-6.3.0-web/css/.formatted/solid.min.css
 - new file:   resources/fontawesome-free-6.3.0-web/css/brands.min.css
 - new file:   resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css
 - new file:   resources/fontawesome-free-6.3.0-web/css/solid.min.css
 - renamed:    res

--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -52,12 +52,12 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
 
-    <link rel="preload" as="style" href="resources/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
+    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/solid.min.css">
+    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/solid.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/brands.min.css">
+    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/brands.min.css">
 
     <link rel="preload" as="image" href="resources/images/terminal.webp" type="image/webp" fetchpriority="high">
 
