--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -32,6 +32,11 @@
     <link rel="canonical" href="https://sainternet.xyz/404.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
+    <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp" fetchpriority="high">
+
+    <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
+
     <link rel="preload" as="style" href="resources/stylesheets/material.cyan-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.cyan-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
@@ -61,8 +66,6 @@
 
     <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp" fetchpriority="high">
 
-    <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
-    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
