saint-lascivious.github.io: newsandupdates, analytics disclosure
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   newsandupdates.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -120,7 +120,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#pwa"><b>PWA!</b></a>, <a class="embiggen" href="#2022metrics">2022 Metrics</a>, <a class="embiggen" href="#munin-pihole-plugins-v08-02-00">Munin Pi-hole Plugins: 08.02.00</a>, <a class="embiggen" href="#reportingproblems">Reporting Problems</a>, <a class="embiggen" href="#aquickstop">A QUICk Stop</a>, <a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#analyticsdisclosure"><b>Analytics Disclosure</b></a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="#2022metrics">2022 Metrics</a>, <a class="embiggen" href="#munin-pihole-plugins-v08-02-00">Munin Pi-hole Plugins: 08.02.00</a>, <a class="embiggen" href="#reportingproblems">Reporting Problems</a>, <a class="embiggen" href="#aquickstop">A QUICk Stop</a>, <a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
             </div>
           </div>
         </div>
@@ -130,6 +130,30 @@
             <h3><span class="embiggen">News and Updates</span></h3>
             <p>
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
+            </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="analyticsdisclosure">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+            <h3><span class="embiggen">Analytics Disclosure</span></h3>
+            <p class="embiggen" id="datetime">
+              Wednesday, 15 February 2023 01:00+13:00 (NZDT)
+            </p>
+            <p>
+              As of approximately 00:00+13:00 (NZDT) Tuesday, 14 February 2023 all pages on this site implemented anonymous metrics collection using Google Analytics 4 and Google Tag Manager.
+            </p>
+            <p>
+              This decision was made to better understand how users are discovering and accessing <code>sainternet.xyz</code>, in order to improve these user experiences.
+            </p>
+            <p>
+              But wait, doesn't <code>dns.sainternet.xyz</code> block Google Analytics and many more telemetry services from functioning?
+            </p>
+            <ul>
+              <li>Good question. Yes. Yes it does.</li>
+            </ul>
+            <p>
+              That's the beauty of it, and the reason I had no qualms about implementing this. Once you're using <code>dns.sainternet.xyz</code>, analytics collection on this site is rendered entirely ineffective.
             </p>
            </div>
         </div>
@@ -144,7 +168,7 @@
               No, it's not a visual sound effect from Adam West's Batman.
             </p>
             <p>
-              It's a webpage, it's an app, it's progressive, it's a Progressive Web App!
+              It's progressive, it's a webpage, it's an app. It's a Progressive Web App!
             </p>
             <p>
               Continuing the trend in honing my skills and adopting modern concepts in the Sainternet ecosystem, and given that this site gradually met all the conditions required in order to do so, you can now install this website as an Android, Chrome or Chromium application<sup><a href="#pwasupportdisclaimer">1</a></sup>.
