saint-lascivious.github.io: lean in to fontawesome stripped test
 - plus, shuffle pwa cache version string
   (*-YYYYDDMMHHMM)
 - clean up pwa cache arrays some more
   (remove unused resources)

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/pwapp-serviceworker.min.js
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   pwapp-serviceworker.min.js
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -35,6 +35,8 @@
     <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp" fetchpriority="high">
 
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
+    <link rel="dns-prefetch" href="www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
     <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
 
     <link rel="preload" as="style" href="resources/stylesheets/material.pink-red.min.css">
@@ -57,12 +59,12 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
 
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/fontawesome-stripped.min.css">
+    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/fontawesome-stripped.min.css">
     <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/solid.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/solid.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/brands.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/brands.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
+    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
 
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
