--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -33,6 +33,8 @@
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
+    <link rel="dns-prefetch" href="www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
     <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
 
     <link rel="preload" as="style" href="resources/stylesheets/material.light_blue-red.min.css">
@@ -53,12 +55,12 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
 
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/fontawesome-stripped.min.css">
+    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/fontawesome-stripped.min.css">
     <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/solid.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/solid.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/brands.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/brands.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
+    <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
 
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
